--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of--مقياس-البرهان-التقني-v3",
+  "name": "مقياس-البرهان-v3",
   "private": true,
   "version": "0.0.0",
   "type": "module",
